# internal/secret/handler.go
@@ -2,53 +2,53 @@ package secret
 
 import (
 	"encoding/json"
+	"fmt"
+	"log"
 	"net/http"
-	"time"
 
+	"bastienbyra.fr/bastienbyra/ByEmber/openapi/autogenerated"
 	openapi_autogen "bastienbyra.fr/bastienbyra/ByEmber/openapi/autogenerated"
 	"github.com/google/uuid"
-	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
-type Handler struct {
-	// Ici tu peux ajouter un service, un repo, etc.
+type SecretHandler struct {
+	service SecretService
 }
 
-func NewHandler() *Handler {
-	return &Handler{}
+func NewHandler() *SecretHandler {
+	return &SecretHandler{}
 }
 
 // (POST /secret)
-func (h *Handler) CreateSecret(w http.ResponseWriter, r *http.Request) {
-	var secret openapi_autogen.Secret
+func (h *SecretHandler) CreateSecret(w http.ResponseWriter, r *http.Request) {
+	var secretRequest openapi_autogen.SecretRequest
 
 	if r.Method != http.MethodPost {
 		http.Error(w, "Unauthorized method.", http.StatusMethodNotAllowed)
 		return
 	}
 
-	err := json.NewDecoder(r.Body).Decode(&secret)
+	err := json.NewDecoder(r.Body).Decode(&secretRequest)
 	if err != nil {
+		log.Fatal(err)
 		http.Error(w, "Invalid JSON.", http.StatusBadRequest)
 		return
 	}
 
-	uuidValue := uuid.New()
-	now := time.Now()
-
-	secretResponse := openapi_autogen.SecretCreated{
-		Id:        (*openapi_types.UUID)(&uuidValue),
-		ExpiresAt: &now,
+	secret := h.service.CreateSecret(secretRequest)
+	url := fmt.Sprintf("http://localhost:8080/%s", secret.Id.String())
+	secretCreated := autogenerated.SecretCreated{
+		Url: &url,
 	}
 
 	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(secretResponse)
+	_ = json.NewEncoder(w).Encode(secretCreated)
 }
 
-func (h *Handler) DeleteSecret(w http.ResponseWriter, r *http.Request, id uuid.UUID) {
+func (h *SecretHandler) DeleteSecret(w http.ResponseWriter, r *http.Request, id uuid.UUID) {
 	// Traitement de suppression
 }
 
-func (h *Handler) GetSecret(w http.ResponseWriter, r *http.Request, id uuid.UUID) {
+func (h *SecretHandler) GetSecret(w http.ResponseWriter, r *http.Request, id uuid.UUID) {
 	// Traitement de récupération
 }
